@@ -16,3 +16,19 @@ Generate AND solve mazes! The following solvers and generators are implemented.
 - Wilson's algorithm
 - Aldous Broder algorithm
 - Hunt and Kill algorithm
+
+# Usage
+Add an environment variable.
+```
+export PATH_TO_FX=path/to/javafx-sdk-VERSION/lib
+```
+Compile the application.
+```
+cd src
+javac --module-path $PATH_TO_FX --add-modules javafx.controls com/borroot/Main.java -d ../out
+```
+Run the application.
+```
+cd ../out
+java --module-path $PATH_TO_FX --add-modules javafx.controls com.borroot.Main
+```
